cargar avatar(img de perfil) desde el api y add modal de carga

--- a/src/components/about/AboutData.astro
+++ b/src/components/about/AboutData.astro
@@ -38,3 +38,6 @@ const aboutItems: AboutProfile[] = profileData.map((profile) => {
     iLiveIn={item.iLiveIn}
   />
 ))}
+<script type="module">
+  window.dispatchEvent(new CustomEvent('island-ready', { detail: { name: 'About' } }));
+</script>
