--- a/src/components/experience/Experience.astro
+++ b/src/components/experience/Experience.astro
@@ -14,3 +14,6 @@ const getExperience: Experience[] = (await cargarDatos<Experience[]>('work_exper
     </li>
   ))}
 </ol>
+<script type="module">
+  window.dispatchEvent(new CustomEvent('island-ready', { detail: { name: 'Experience' } }));
+</script>
