--- a/src/components/education/Education.astro
+++ b/src/components/education/Education.astro
@@ -50,3 +50,6 @@ const getCertifications: Certification[] = (await cargarDatos<Certification[]>('
     </ol>
   </div>
 </div>
+<script type="module">
+  window.dispatchEvent(new CustomEvent('island-ready', { detail: { name: 'Education' } }));
+</script>
