add sección asesorias - cambio de color a sky mas oscuro

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,6 +6,7 @@ import SocialNetworks from "@components/SocialNetworks.astro";
   class="text-center mb-12 md:mb-4 bg-sky-50 text-sky-950 py-8 max-w-screen-lg mx-auto"
 >
   <div class="flex flex-col items-center pb-16 md:pb-8">
+
     <!-- Logo con efecto de gradiente -->
     <div class="group relative">
       <div
@@ -20,14 +21,8 @@ import SocialNetworks from "@components/SocialNetworks.astro";
         class="relative z-10 mb-2 opacity-90 transition-transform duration-300 hover:scale-105 hover:opacity-100"
       />
     </div>
-
-    <!-- Frase motivacional -->
-    <blockquote class="text-base italic text-gray-700 px-4 max-w-lg my-4">
-      "Ponte un blanco alto y haz fervientes esfuerzos por alcanzarlo y no te
-      desanimes" <span class="font-semibold">EGW</span>
-    </blockquote>
-
-    <div class="flex flex-col items-center mt-4">
+    
+     <div class="flex flex-col items-center mt-4">
       <!-- Redes sociales -->
       <SocialNetworks cvUrl="https://cv.jimcostdev.com"/>
     </div>
@@ -37,10 +32,18 @@ import SocialNetworks from "@components/SocialNetworks.astro";
       Hecho con 💙 - © <span class="font-semibold"
         >Ronaldo Jiménez <span
           id="currentYear"
-          class="font-semibold bg-gradient-to-r from-sky-400 to-sky-600 bg-clip-text text-transparent"
+          class="font-semibold bg-gradient-to-r from-sky-500 to-sky-800 bg-clip-text text-transparent"
         ></span></span
       >
     </p>
+
+    
+
+    <!-- Frase motivacional -->
+    <blockquote class="text-sm md:text-md italic text-gray-700 px-4 max-w-lg my-4">
+      "Ponte un blanco alto y haz fervientes esfuerzos por alcanzarlo y no te
+      desanimes" <span class="font-semibold">EGW</span>
+    </blockquote>
   </div>
 </footer>
 
