--- a/src/components/TitleSection.astro
+++ b/src/components/TitleSection.astro
@@ -1,5 +1,5 @@
-<h2 class="text-xl md:text-2xl font-semibold text-center py-2 mb-4 tracking-wide relative opacity-0 animate-fade-in-up">
-  <span class="bg-gradient-to-r from-sky-400 to-sky-600 bg-clip-text text-transparent">
+<h2 class="text-2xl md:text-3xl font-semibold text-center py-2 mb-4 tracking-wide relative opacity-0 animate-fade-in-up">
+  <span class="bg-gradient-to-r from-sky-600 to-sky-900 bg-clip-text text-transparent">
     <slot />
   </span>
 </h2>
