cambio de diseño en el apartado de skills, tambien se movio a about/ y deje la sección de skiils comentada como referencia historica, por si se necesita volver a ella, ya que tiene dinamizado lo de los iconos con las tecnologias

--- a/src/components/about/AboutData.astro
+++ b/src/components/about/AboutData.astro
@@ -12,12 +12,10 @@ const contactoRaw = await cargarDatos<Contact[]>('contact');
 const contactData: Contact[] = contactoRaw ?? [];
 
 // 3) Total años de experiencia (number)
-//    PASO el endpoint "work_experience" y el sufijo "total_years"
 const totalYears = (await cargarDatos<number>(
   'work_experience',
   'total_years'
 )) ?? 0;
-
 
 // 4) Junto todo para pintar el componente
 const aboutItems: AboutProfile[] = profileData.map((profile) => {
@@ -30,11 +28,13 @@ const aboutItems: AboutProfile[] = profileData.map((profile) => {
   };
 });
 ---
-{aboutItems.map(item => (
+{aboutItems.map((item, idx) => (
   <CardAbout
+    key={`about-${item.username ?? idx}`}
     description={item.description}
     totalYears={item.totalYears}
     nationality={item.nationality}
     iLiveIn={item.iLiveIn}
+    skills={item.skills ?? []}  
   />
 ))}
