--- a/src/components/about/ProfessionalGuidance.astro
+++ b/src/components/about/ProfessionalGuidance.astro
@@ -20,7 +20,7 @@ import WhatsAppIcon   from '@components/icons/WhatsApp.astro';
         class="bg-sky-50 rounded-2xl p-6 border border-sky-100 shadow-sm hover:shadow-md transition transform hover:scale-[1.02] text-center"
       >
         <!-- Icono arriba -->
-        <div class="size-12 md:size-14 mx-auto mb-3 rounded-xl flex items-center justify-center border-2 border-sky-600 text-sky-700">
+        <div class="size-12 md:size-14 mx-auto mb-3  flex items-center justify-center border-1 rounded-2xl border-sky-600 text-sky-700">
           <CodeIcon class="size-6 md:size-7" />
         </div>
 
@@ -43,7 +43,7 @@ import WhatsAppIcon   from '@components/icons/WhatsApp.astro';
         class="bg-sky-50 rounded-2xl p-6 border border-sky-100 shadow-sm hover:shadow-md transition transform hover:scale-[1.02] text-center"
       >
         <!-- Icono arriba -->
-        <div class="size-12 md:size-14 mx-auto mb-3 rounded-xl flex items-center justify-center border-2 border-sky-600 text-sky-700">
+        <div class="size-12 md:size-14 mx-auto mb-3 rounded-2xl flex items-center justify-center border-1 border-sky-600 text-sky-700">
           <TrendingUpIcon class="size-6 md:size-7" />
         </div>
 
@@ -69,7 +69,7 @@ import WhatsAppIcon   from '@components/icons/WhatsApp.astro';
         target="_blank"
         rel="noopener noreferrer"
         aria-label="Contactar por WhatsApp"
-        class="inline-flex items-center gap-3 px-6 py-3 border-2 border-green-600 text-green-700 rounded-2xl font-semibold text-base hover:bg-green-50 transition-all duration-300 transform hover:scale-[1.02] focus:outline-none focus:ring-4 focus:ring-green-300/20 shadow-sm"
+        class="inline-flex items-center gap-2 px-4 py-2 border-1 border-green-600 text-green-700 rounded-3xl font-medium text-base hover:bg-green-50 hover:border-green-700 transition-all duration-300 transform hover:scale-[1.02] focus:outline-none focus:ring-4 focus:ring-green-300/20 shadow-sm"
       >
         <WhatsAppIcon class="size-6 md:size-7" />
         Escríbeme
