--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,13 +35,13 @@ import ProfessionalGuidance from "@components/about/ProfessionalGuidance.astro";
 		<About server:defer/>
 	</SectionContainer>
 
-	<SectionContainer id="skills">
+	<!-- <SectionContainer id="skills">
 		<Title>Skills</Title>
 		<Skills server:defer/>
-	</SectionContainer>
+	</SectionContainer> -->
 
 	<SectionContainer id="professional">
-		<Title>¿Necesitas orientación profesional?</Title>
+		<Title>¿Cómo puedo ayudarte?</Title>
 		<ProfessionalGuidance />
 	</SectionContainer>
 </Layout>
