--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -5,7 +5,7 @@ const { class: className, id } = Astro.props
 <section
   id={id}
   data-section={id}
-  class={`section ${className} scroll-m-20 w-full mx-auto container lg:max-w-4xl md:max-w-2xl my-4`}
+  class={`section ${className} scroll-m-20 w-full mx-auto container lg:max-w-4xl md:max-w-2xl my-4 md:my-8`}
 >
   <slot />
 </section>
