--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,9 +31,9 @@ import ButtonNav from './ButtonNav.astro';
         <span class="hidden md:inline">Proyectos</span>
       </ButtonNav>
 
-      <ButtonNav href="/#sobre-mi">
+      <ButtonNav href="/#professional" >
         <AboutMeIcon class="size-6 md:size-5" />
-        <span class="hidden md:inline">Sobre mí</span>
+        <span class="hidden md:inline">Contacto</span>
       </ButtonNav>
     </div>
   </nav>
