styles: cambio de diseño a cards en experiencia laboral y cambio de color genral a white

--- a/src/components/about/CardAbout.astro
+++ b/src/components/about/CardAbout.astro
@@ -74,7 +74,7 @@ const displayLive: string = liveCountry || iLiveIn || 'N/A';
 ---
 
 <article class="w-full max-w-6xl mx-auto my-2 px-4">
-  <div class="bg-gradient-to-br from-white/30 to-sky-50/10 shadow-xs rounded-2xl p-6 md:p-8 border border-sky-100">
+  <div class="bg-white/50 shadow-xs rounded-2xl p-6 md:p-8 border border-sky-100">
     
     <!-- Header minimalista con info clave -->
     <div class="flex flex-col sm:flex-row items-center justify-between gap-6 mb-8">
