--- a/src/components/about/ProfessionalGuidance.astro
+++ b/src/components/about/ProfessionalGuidance.astro
@@ -4,7 +4,7 @@ import TrendingUpIcon from '@components/icons/TrendingUp.astro';
 import WhatsAppIcon   from '@components/icons/WhatsApp.astro';
 ---
 
-<section class="pt-2 px-4 bg-sky-50">
+<section class="pt-2 px-4">
   <div class="max-w-screen-lg mx-auto">
     <!-- Título principal -->
     <div class="text-center mb-6">
@@ -17,7 +17,7 @@ import WhatsAppIcon   from '@components/icons/WhatsApp.astro';
     <div class="grid gap-6 md:grid-cols-2 mb-6">
       <!-- Card: Asesoría técnica -->
       <article
-        class="bg-sky-50 rounded-2xl p-6 border border-sky-100 shadow-sm hover:shadow-md transition transform hover:scale-[1.02] text-center"
+        class=" bg-white/50 rounded-2xl p-6 border border-sky-100 shadow-sm hover:shadow-md transition transform hover:scale-[1.02] text-center"
       >
         <!-- Icono arriba -->
         <div class="size-12 md:size-14 mx-auto mb-3  flex items-center justify-center border-1 rounded-2xl border-sky-600 text-sky-700">
@@ -40,7 +40,7 @@ import WhatsAppIcon   from '@components/icons/WhatsApp.astro';
 
       <!-- Card: Crecimiento profesional -->
       <article
-        class="bg-sky-50 rounded-2xl p-6 border border-sky-100 shadow-sm hover:shadow-md transition transform hover:scale-[1.02] text-center"
+        class=" bg-white/50 rounded-2xl p-6 border border-sky-100 shadow-sm hover:shadow-md transition transform hover:scale-[1.02] text-center"
       >
         <!-- Icono arriba -->
         <div class="size-12 md:size-14 mx-auto mb-3 rounded-2xl flex items-center justify-center border-1 border-sky-600 text-sky-700">
