--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -75,7 +75,7 @@ const ogImage = "https://firebasestorage.googleapis.com/v0/b/jimcostdev-firebase
     <ClientRouter />
   </head>
   
-  <body class="absolute inset-0 -z-10 h-full w-full bg-sky-50 bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px]">
+  <body class="absolute inset-0 -z-10 h-full w-full bg-white-50/50 bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px]">
     <a href="#main-content" class="sr-only focus:not-sr-only focus:fixed top-4 left-4 bg-sky-600 text-white px-4 py-2 rounded-lg">
       Saltar al contenido principal
     </a>
