--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import SocialNetworks from "@components/SocialNetworks.astro";
 ---
 
 <footer
-  class="text-center mb-12 md:mb-4 bg-sky-50 text-sky-950 py-8 max-w-screen-lg mx-auto"
+  class="text-center mb-12 md:mb-4 text-sky-950 py-8 max-w-screen-lg mx-auto"
 >
   <div class="flex flex-col items-center pb-16 md:pb-8">
 
