--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,31 +9,31 @@ import ButtonNav from './ButtonNav.astro';
 
 <header class="w-full relative pb-2">
   <!-- Barra de navegación fija en la parte inferior para móvil, en la parte superior para escritorio -->
-  <nav id="navegacion" class="fixed bottom-0 left-0 w-full shadow-sm bg-sky-50 text-sky-950 py-3 z-50 md:top-0 md:bottom-auto">
+  <nav id="navegacion" class="fixed bottom-0 left-0 w-full shadow-sm bg-white text-sky-950 py-3 z-50 md:top-0 md:bottom-auto">
     <div class="container mx-auto max-w-4xl md:w-3/4 flex justify-between items-center px-8 md:px-0 md:space-x-4">
       <ButtonNav href="/#principal">
         <HomeIcon class="size-6 md:size-5" />
-        <span class="hidden md:inline">Inicio</span>
+        <span class="hidden md:inline text-base">Inicio</span>
       </ButtonNav>
 
       <ButtonNav href="/#experiencia">
         <ExperienceIcon class="size-6 md:size-5" />
-        <span class="hidden md:inline">Experiencia</span>
+        <span class="hidden md:inline text-base">Experiencia</span>
       </ButtonNav>
 
       <ButtonNav href="/#estudios">
         <EducationIcon class="size-6 md:size-5" />
-        <span class="hidden md:inline">Estudios</span>
+        <span class="hidden md:inline text-base">Estudios</span>
       </ButtonNav>
 
       <ButtonNav href="/#proyectos">
         <ProjectIcon class="size-6 md:size-5" />
-        <span class="hidden md:inline">Proyectos</span>
+        <span class="hidden md:inline text-base">Proyectos</span>
       </ButtonNav>
 
       <ButtonNav href="/#professional" >
         <AboutMeIcon class="size-6 md:size-5" />
-        <span class="hidden md:inline">Contacto</span>
+        <span class="hidden md:inline text-base">Contacto</span>
       </ButtonNav>
     </div>
   </nav>
