--- a/src/components/education/Education.astro
+++ b/src/components/education/Education.astro
@@ -10,7 +10,7 @@ const getCertifications: Certification[] = (await cargarDatos<Certification[]>('
 ---
 
 <div class="flex justify-center mb-5">
-  <div class="bg-sky-50 rounded-lg shadow-md p-4 flex items-center">
+  <div class="bg-white/50 rounded-lg shadow-md p-4 flex items-center">
     <div class="flex items-center mr-4">
       <div class="w-3 h-3 bg-yellow-500 rounded-full mr-2"></div>
       <span class="text-sky-600 font-semibold">Grado</span>
