--- a/src/components/education/EducationItem.astro
+++ b/src/components/education/EducationItem.astro
@@ -25,7 +25,7 @@ const typeText = type === 'grado' ? 'Grado académico' : 'Certificación';
       {typeText}
     </span>
 
-    <h3 class="text-lg md:text-2xl font-bold text-sky-700 mb-2 leading-snug break-words capitalize">{title}</h3>
+    <h3 class="text-lg md:text-xl font-bold text-sky-700 mb-2 leading-snug break-words capitalize">{title}</h3>
     <p class="font-semibold text-gray-800 mb-3 capitalize">{institution}</p>
 
     {type === 'grado' && (
