cambio del titulo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import ProfessionalGuidance from "@components/about/ProfessionalGuidance.astro";
 	</SectionContainer>
 	
 	<SectionContainer id="experiencia">
-		<Title>Experiencia</Title>
+		<Title>Experiencia Reciente</Title>
 		<Experience server:defer/>
 	</SectionContainer>
 
